Added method to add subcategory to category